src/test/deca/syntax/invalid/circularInclude.deca
// Description:
//    programme vide
//
// Resultats:
//    circular Include
//
// Historique:
//    cree le 11/01/2023

#include "h.decah"
